--- a/vignettes/articles/FAQ.Rmd
+++ b/vignettes/articles/FAQ.Rmd
@@ -182,12 +182,12 @@ Let's say that you are running a plotting function repeatedly, but only changing
 First, I am adding a new column to `sample_treatment_names_and_colours` which contains the filepath to each representative trace .png file.
 
 ```{r echo=T}
-evoked_trace_filename = c(
-    "figures/Category-2-Control-Trace.png",
-    "figures/Category-2-HNMPA-Trace.png",
-    "figures/Category-2-PPP-Trace.png",
-    "figures/Category-2-PPP-and-HNMPA-Trace.png"
-  )
+evoked_trace_filename <- c(
+  "figures/Category-2-Control-Trace.png",
+  "figures/Category-2-HNMPA-Trace.png",
+  "figures/Category-2-PPP-Trace.png",
+  "figures/Category-2-PPP-and-HNMPA-Trace.png"
+)
 
 list_of_treatments <- sample_treatment_names_and_colours
 
@@ -198,28 +198,30 @@ list_of_treatments$representative_trace_filepath <- evoked_trace_filename
 Then, I'm using `purrr::pmap()` using the `sample_treatment_names_and_colours()` dataset. I will use the `treatment` column in the `treatment` argument.
 
 ```{r eval=T, include=T}
-pmap(.l = list_of_treatments,
-     .f = ~ with(
-       list(...),
-       plot_summary_current_data(
-         data = sample_pruned_eEPSC_df$all_cells,
-         plot_category = 2,
-         plot_treatment = treatment,
-         current_type = "eEPSC",
-         y_variable = "amplitude",
-         hormone_added = "Insulin",
-         hormone_or_HFS_start_time = 5,
-         include_representative_trace = "yes",
-         representative_trace_filename = representative_trace_filepath,
-         y_axis_limit = 175,
-         signif_stars = "yes",
-         t_test_df = sample_eEPSC_t_test_df,
-         large_axis_text = "no",
-         shade_intervals = "no",
-         treatment_colour_theme = sample_treatment_names_and_colours,
-         theme_options = sample_theme_options
-       )
-     ))
+pmap(
+  .l = list_of_treatments,
+  .f = ~ with(
+    list(...),
+    plot_summary_current_data(
+      data = sample_pruned_eEPSC_df$all_cells,
+      plot_category = 2,
+      plot_treatment = treatment,
+      current_type = "eEPSC",
+      y_variable = "amplitude",
+      hormone_added = "Insulin",
+      hormone_or_HFS_start_time = 5,
+      include_representative_trace = "yes",
+      representative_trace_filename = representative_trace_filepath,
+      y_axis_limit = 175,
+      signif_stars = "yes",
+      t_test_df = sample_eEPSC_t_test_df,
+      large_axis_text = "no",
+      shade_intervals = "no",
+      treatment_colour_theme = sample_treatment_names_and_colours,
+      theme_options = sample_theme_options
+    )
+  )
+)
 ```
 
 
@@ -232,7 +234,6 @@ pmap(.l = list_of_treatments,
 Functions with multiple treatments (such as `plot_PPR_data_multiple_treatments()` and `plot_AP_frequencies_multiple_treatments()`) have an argument called `include_all_treatments`. Change this to "no" and then define a list of treatments in the `list_of_treatments` argument.
 
 ```{r plot-ap-frequencies-limited-treatments, fig.alt="A plot of action potential frequency over current injection in pA, showing only two treatments: Control and PPP. This figure demonstrates that you can choose how many treatments to include in a plot."}
-
 plot_AP_frequencies_multiple_treatments(
   data = sample_AP_count_data,
   include_all_treatments = "no",
